[tool.poetry]
name = "scutils"
version = "0.1.0"
description = "Scrapy Cluster utilities"
authors = ["Ludmil Simeonov <lsimeonov@stellion.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
python-json-logger = "^0.1.8"
redis = "^3.5.3"
kazoo = "^2.4.0"
mock = "^2.0.0"
testfixtures = "^6.0.2"
ujson = "^1.35"
future = "^0.16.0"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
